--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,18 @@
 				Themes <span class="caret"></span>
 			</button>
 			<ul class="dropdown-menu themes" role="menu">
-				<li><a href="#">Default</a></li>
 			</ul>
 		</div>
-		<!-- build:include bootswatch/bootswatch.html -->
+		<!-- build:include bootswatch.html -->
 		<!-- /build -->
 	</div>
 
 	<script src="assets/js/lib/jquery.bootswatch.js"></script>
 	<script src="assets/js/lib/bootstrap.min.js"></script>
+	<script src="assets/js/bootswatch.js"></script>
 	<script>
 		(function($) {
 			$(document).ready(function($) {
-				$('[data-toggle="popover"]').popover();
-				$('[data-toggle="tooltip"]').tooltip();
 				$('.themes').bootswatch();
 			});
 		})(jQuery);
